CMAKE_MINIMUM_REQUIRED(VERSION 3.2)
PROJECT(systrayApp)

SET(CMAKE_CXX_STANDARD 17)

set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}) 
FIND_PACKAGE(GTK3 REQUIRED)

pkg_check_modules(APPINDICATOR REQUIRED appindicator3-0.1)

MESSAGE(STATUS "GTK3_INCLUDE_DIRS")
MESSAGE( STATUS ${GTK3_INCLUDE_DIRS})
MESSAGE(STATUS "GTK3_LIBRARIES")
MESSAGE( STATUS ${GTK3_LIBRARIES})
MESSAGE(STATUS "APPINDICATOR_INCLUDE_DIRS")
MESSAGE( STATUS ${APPINDICATOR_INCLUDE_DIRS})
MESSAGE(STATUS "APPINDICATOR_LIBRARIES")
MESSAGE( STATUS ${APPINDICATOR_LIBRARIES})
MESSAGE(STATUS "done")

# Setup CMake to use GTK+, tell the compiler where to look for headers
# and to the linker where to look for libraries
INCLUDE_DIRECTORIES(${GTK3_INCLUDE_DIRS} ${APPINDICATOR_INCLUDE_DIRS})
LINK_DIRECTORIES(${GTK3_LIBRARIES} ${APPINDICATOR_LIBRARIES} )

ADD_EXECUTABLE(systrayApp main.cpp)

TARGET_INCLUDE_DIRECTORIES(systrayApp PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_SOURCE_DIR}
)

TARGET_LINK_LIBRARIES(systrayApp LINK_PUBLIC
    ${GTK3_LIBRARIES} 
    ${APPINDICATOR_LIBRARIES}
)